--- a/src/pages/account/account.html
+++ b/src/pages/account/account.html
@@ -1,17 +1,18 @@
-<ion-header>
-  <ion-navbar hideBackButton color="{{movementsSwitch}}">
-    <ion-title>Sitamet</ion-title>
+<ion-header no-border>
+  <ion-navbar hideBackButton>
+    <ion-title class="title">Sitamet</ion-title>
+    <ion-icon class="icon-menu" ion-button menuToggle end name="menu"></ion-icon>
   </ion-navbar>
 
-  <ion-toolbar no-border color="{{movementsSwitch}}">
-    <ion-segment [(ngModel)]="movementsSwitch" no-padding color="light">
-      <ion-segment-button value="all">
+  <ion-toolbar>
+    <ion-segment class="segment" [(ngModel)]="movementsSwitch" color="dark">
+      <ion-segment-button class="button-segment" value="all">
         All
       </ion-segment-button>
-      <ion-segment-button value="spent">
+      <ion-segment-button class="button-segment" value="spent">
         Spent
       </ion-segment-button>
-      <ion-segment-button value="deposited">
+      <ion-segment-button class="button-segment" value="deposited">
         Deposited
       </ion-segment-button>
     </ion-segment>
@@ -22,7 +23,8 @@
 <ion-content>
 
   <ion-card class="card-balance">
-    <ion-card-header class="balance" *ngFor="let balance of balance">{{balance.Balance}} €</ion-card-header>
+    <ion-card-header class="balance" *ngFor="let balance of balance">{{balance.Balance}}€</ion-card-header>
+    <ion-card-content class="content-balance">Balance</ion-card-content>
   </ion-card>
 
   <div [ngSwitch]="movementsSwitch">
@@ -50,11 +52,12 @@
         </ion-item>
       </ion-list>
 
-      <ion-fab right bottom>
+      <ion-fab class="add-button" right bottom>
         <button ion-fab color="spent">
           <ion-icon name="add"></ion-icon>
         </button>
       </ion-fab>
+
     </ion-list>
 
     <ion-list *ngSwitchCase="'deposited'">
@@ -68,7 +71,7 @@
         </ion-item>
       </ion-list>
 
-      <ion-fab right bottom>
+      <ion-fab class="add-button" right bottom>
         <button ion-fab color="deposited">
           <ion-icon name="add"></ion-icon>
         </button>
