--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -1,30 +1,13 @@
 <ion-header no-border>
-    <img class="logo" src="../../assets/imgs/logo.png">
-  </ion-header>
-  
-  <ion-content>
-    <ion-slides>
-  
-      <ion-slide>
-        <h2>Controla tus gastos personales</h2>
-      </ion-slide>
-  
-      <ion-slide>
-        <h2>Todo en la palma de tu mano</h2>
-      </ion-slide>
-  
-      <ion-slide>
-        <h2>Con total seguridad de acceso mediante huella</h2>
-      </ion-slide>
-  
-    </ion-slides>
-  
-  </ion-content>
-  
-  <ion-footer no-border>
-    <ion-list class="list-access">
-      <ion-item class="item-access" (click)="readFingerprint()">
-        <ion-icon class="icon-finger-print" name="finger-print"></ion-icon>
-      </ion-item>
-    </ion-list>
-  </ion-footer>
+  <img class="logo" src="../../assets/imgs/logo.png">
+</ion-header>
+
+<ion-content></ion-content>
+
+<ion-footer no-border>
+  <ion-list class="list-access">
+    <ion-item class="item-access" (click)="readFingerprint()">
+      <ion-icon class="icon-finger-print" name="finger-print"></ion-icon>
+    </ion-item>
+  </ion-list>
+</ion-footer>
