--- a/src/pages/account/account.html
+++ b/src/pages/account/account.html
@@ -6,9 +6,6 @@
 
   <ion-toolbar>
     <ion-segment class="segment" [(ngModel)]="movementsSwitch" color="dark">
-      <ion-segment-button class="button-segment" value="all">
-        All
-      </ion-segment-button>
       <ion-segment-button class="button-segment" value="spent">
         Spent
       </ion-segment-button>
@@ -18,66 +15,72 @@
     </ion-segment>
   </ion-toolbar>
 
+  <ion-card class="card-balance" no-padding>
+    <ion-card-header class="balance">{{balance}}€</ion-card-header>
+    <ion-card-content class="subtitle">Balance</ion-card-content>
+  </ion-card>
+
 </ion-header>
 
 <ion-content>
 
-  <ion-card class="card-balance">
-    <ion-card-header class="balance" *ngFor="let balance of balance">{{balance.Balance}}€</ion-card-header>
-    <ion-card-content class="content-balance">Balance</ion-card-content>
-  </ion-card>
+  <ion-refresher (ionRefresh)="refresh($event)">
+    <ion-refresher-content></ion-refresher-content>
+  </ion-refresher>
 
   <div [ngSwitch]="movementsSwitch">
 
-    <ion-list *ngSwitchCase="'all'">
-      <ion-list>
-        <ion-item *ngFor="let movement of movements">
-          <p class="title-movement">{{movement.Concept}}</p>
-          <div class="data-movement">
-            <p>{{movement.Value}} €</p>
-            <p>{{movement.Date}}</p>
-          </div>
-        </ion-item>
-      </ion-list>
-    </ion-list>
+    <ion-card>
+      <ion-card-header class="header-card-movement">Movements</ion-card-header>
+      <ion-card-content>
+        <ion-list *ngSwitchCase="'spent'">
 
-    <ion-list *ngSwitchCase="'spent'">
-      <ion-list>
-        <ion-item *ngFor="let spent of expenses">
-          <p class="title-movement">{{spent.Concept}}</p>
-          <div class="data-movement">
-            <p>{{spent.Value}} €</p>
-            <p>{{spent.Date}}</p>
-          </div>
-        </ion-item>
-      </ion-list>
+          <p class="subtitle" *ngIf="expenses.length == 0">No expenses</p>
 
-      <ion-fab class="add-button" right bottom>
-        <button ion-fab color="spent">
-          <ion-icon name="add"></ion-icon>
-        </button>
-      </ion-fab>
+          <ion-list>
+            <ion-item *ngFor="let spent of expenses">
+              <p class="title-movement">{{spent.concept}}</p>
+              <div class="data-movement">
+                <p>{{spent.value}} €</p>
+                <p>{{spent.date}}</p>
+              </div>
+            </ion-item>
+          </ion-list>
 
-    </ion-list>
+        </ion-list>
 
-    <ion-list *ngSwitchCase="'deposited'">
-      <ion-list>
-        <ion-item *ngFor="let deposited of deposits">
-          <p class="title-movement">{{deposited.Concept}}</p>
-          <div class="data-movement">
-            <p>{{deposited.Value}} €</p>
-            <p>{{deposited.Date}}</p>
-          </div>
-        </ion-item>
-      </ion-list>
 
-      <ion-fab class="add-button" right bottom>
-        <button ion-fab color="deposited">
-          <ion-icon name="add"></ion-icon>
-        </button>
-      </ion-fab>
+        <ion-list *ngSwitchCase="'deposited'">
 
-    </ion-list>
+          <p class="subtitle" *ngIf="deposits.length == 0">No deposits</p>
+
+          <ion-list>
+            <ion-item *ngFor="let deposited of deposits">
+              <p class="title-movement">{{deposited._concept}}</p>
+              <div class="data-movement">
+                <p>{{deposited._value}} €</p>
+                <p displayFormat="DD MM YYYY">{{deposited._date}}</p>
+              </div>
+            </ion-item>
+          </ion-list>
+
+        </ion-list>
+
+      </ion-card-content>
+    </ion-card>
+
   </div>
+
+  <ion-fab *ngIf="movementsSwitch === 'deposited'" class="add-button" right bottom (click)="addDeposit()">
+    <button ion-fab color="deposited">
+      <ion-icon name="add"></ion-icon>
+    </button>
+  </ion-fab>
+
+  <ion-fab *ngIf="movementsSwitch === 'spent'" class="add-button" right bottom>
+    <button ion-fab color="spent">
+      <ion-icon name="add"></ion-icon>
+    </button>
+  </ion-fab>
 
 </ion-content>
