--- a/src/pages/settings/settings.html
+++ b/src/pages/settings/settings.html
@@ -4,6 +4,14 @@
   </ion-navbar>
 </ion-header>
 
-<ion-content padding>
-
+<ion-content>
+  <ion-list>
+    <ion-item>
+      <ion-icon name="finger-print" item-start></ion-icon>
+      <ion-label>
+        Fingerprint Authentication
+      </ion-label>
+      <ion-toggle (ionChange)="changeConfiguration()" [(ngModel)]="fingerprint" item-end></ion-toggle>
+    </ion-item>
+  </ion-list>
 </ion-content>
