--- a/src/pages/settings/settings.html
+++ b/src/pages/settings/settings.html
@@ -5,7 +5,9 @@
 </ion-header>
 
 <ion-content>
-  <ion-list>
+  <ion-item-group>
+
+    <ion-item-divider color="light">Security</ion-item-divider>
     <ion-item>
       <ion-icon name="finger-print" item-start></ion-icon>
       <ion-label>
@@ -13,5 +15,6 @@
       </ion-label>
       <ion-toggle (ionChange)="changeConfiguration()" [(ngModel)]="fingerprint" item-end></ion-toggle>
     </ion-item>
-  </ion-list>
+
+  </ion-item-group>
 </ion-content>
