--- a/src/pages/add-deposit/add-deposit.html
+++ b/src/pages/add-deposit/add-deposit.html
@@ -4,20 +4,38 @@
   </ion-navbar>
 </ion-header>
 
-<ion-content>
+<ion-content [formGroup]="validatorDeposits">
 
-    <ion-item>
+  <ion-list class="form-list">
+
+    <ion-item class="form-item">
       <ion-label floating>Concept</ion-label>
-      <ion-input type="text" [(ngModel)]="concept"></ion-input>
+      <ion-input type="text" [(ngModel)]="concept" formControlName="concept"></ion-input>
     </ion-item>
+    <ng-container *ngFor="let validation of validatorDepositsMessages.concept">
+      <p class="form-error-message"
+        *ngIf="validatorDeposits.get('concept').hasError(validation.type) && hasError(validatorDeposits.get('concept'))">
+        {{ validation.message }}
+      </p>
+    </ng-container>
 
-    <ion-item>
+    <ion-item class="form-item">
       <ion-label floating>Value</ion-label>
-      <ion-input type="number" [(ngModel)]="value"></ion-input>
+      <ion-input type="number" [(ngModel)]="value" formControlName="value"></ion-input>
     </ion-item>
+    <ng-container *ngFor="let validation of validatorDepositsMessages.value">
+        <p class="form-error-message"
+          *ngIf="validatorDeposits.get('value').hasError(validation.type) && hasError(validatorDeposits.get('value'))">
+          {{ validation.message }}
+        </p>
+      </ng-container>
+
+  </ion-list>
 
 </ion-content>
 
-<ion-footer>
-    <button class="add-buttom" full (click)="addMovement()">Add</button>
-</ion-footer>
+<ion-fab right bottom class="add-button">
+  <button ion-fab color="deposited" [disabled]="errorsFormGroup(validatorDeposits)" (click)="addMovement()">
+    <ion-icon name="checkmark"></ion-icon>
+  </button>
+</ion-fab>
