Radical changes. Unique movements and use of filters for expenses and deposits. Possibility of visualizing movements. New settings and some visual changes have been added.

--- a/src/pages/add-movement/add-movement.html
+++ b/src/pages/add-movement/add-movement.html
@@ -1,6 +1,6 @@
 <ion-header no-border>
   <ion-navbar>
-    <ion-title>Add {{movementType.type}}</ion-title>
+    <ion-title>Add movement</ion-title>
   </ion-navbar>
 </ion-header>
 
