--- a/src/pages/account/account.html
+++ b/src/pages/account/account.html
@@ -6,6 +6,9 @@
 
   <ion-toolbar>
     <ion-segment class="segment" [(ngModel)]="movementsSwitch" color="dark">
+      <ion-segment-button class="button-segment" value="all">
+        All
+      </ion-segment-button>
       <ion-segment-button class="button-segment" value="expenses">
         Expenses
       </ion-segment-button>
@@ -16,7 +19,7 @@
   </ion-toolbar>
 
   <ion-card class="card-balance" no-padding>
-    <ion-card-header class="balance">{{balance}}€</ion-card-header>
+    <ion-card-header class="balance">{{balance}}</ion-card-header>
     <ion-card-content class="subtitle">Balance</ion-card-content>
   </ion-card>
 
@@ -24,22 +27,35 @@
 
 <ion-content>
 
-  <ion-refresher (ionRefresh)="refresh($event)">
-    <ion-refresher-content></ion-refresher-content>
-  </ion-refresher>
-
   <div [ngSwitch]="movementsSwitch">
+
+    <ion-list *ngSwitchCase="'all'">
+      <p class="subtitle" *ngIf="movements.length == 0">No movements</p>
+
+      <ion-card *ngFor="let movement of movements" class="card-movement" (click)="showMovement(movement)">
+        <ion-card-header no-padding class="data-movement">
+          <p class="data-header movement-concept">{{movement._concept}}</p>
+          <p *ngIf="movement.isPositive" class="data-header value-positive">{{movement._value}}</p>
+          <p *ngIf="!movement.isPositive" class="data-header value-negative">{{movement._value}}</p>
+        </ion-card-header>
+        <ion-card-content no-padding class="data-movement">
+          <p class="data-content">{{movement._date}}</p>
+          <p class="data-content">{{movement._associateBalance}}</p>
+        </ion-card-content>
+      </ion-card>
+    </ion-list>
 
     <ion-list *ngSwitchCase="'expenses'">
       <p class="subtitle" *ngIf="expenses.length == 0">No expenses</p>
 
-      <ion-card *ngFor="let spent of expenses" class="card-movement">
-        <ion-card-header no-padding>
-          {{spent._concept}}
+      <ion-card *ngFor="let spent of expenses" class="card-movement" (click)="showMovement(spent)">
+        <ion-card-header no-padding class="data-movement">
+          <p class="data-header movement-concept">{{spent._concept}}</p>
+          <p class="data-header value-negative">{{spent._value}}</p>
         </ion-card-header>
-        <ion-card-content class="data-movement" no-padding>
-          <p class="movement-value value-negative">{{spent._value}} €</p>
-          <p class="movement-date">{{spent._date}}</p>
+        <ion-card-content no-padding class="data-movement">
+          <p class="data-content">{{spent._date}}</p>
+          <p class="data-content">{{spent._associateBalance}}</p>
         </ion-card-content>
       </ion-card>
     </ion-list>
@@ -47,29 +63,24 @@
     <ion-list *ngSwitchCase="'deposits'">
       <p class="subtitle" *ngIf="deposits.length == 0">No deposits</p>
 
-      <ion-card *ngFor="let deposit of deposits" class="card-movement">
-        <ion-card-header no-padding>
-          {{deposit._concept}}
+      <ion-card *ngFor="let deposit of deposits" class="card-movement" (click)="showMovement(deposit)">
+        <ion-card-header no-padding class="data-movement">
+          <p class="data-header movement-concept">{{deposit._concept}}</p>
+          <p class="data-header value-positive">{{deposit._value}}</p>
         </ion-card-header>
-        <ion-card-content class="data-movement" no-padding>
-          <p class="movement-value value-positive">{{deposit._value}}€</p>
-          <p class="movement-date">{{deposit._date}}</p>
+        <ion-card-content no-padding class="data-movement">
+          <p class="data-content">{{deposit._date}}</p>
+          <p class="data-content">{{deposit._associateBalance}}</p>
         </ion-card-content>
       </ion-card>
     </ion-list>
 
-    <ion-fab *ngSwitchCase="'deposits'" class="add-button" right bottom (click)="addDeposit()">
-      <button ion-fab color="deposited">
-        <ion-icon name="add"></ion-icon>
-      </button>
-    </ion-fab>
-  
-    <ion-fab *ngSwitchCase="'expenses'" class="add-button" right bottom (click)="addSpent()">
-      <button ion-fab color="spent">
-        <ion-icon name="add"></ion-icon>
-      </button>
-    </ion-fab>
-
   </div>
+
+  <ion-fab class="add-button" right bottom (click)="addMovement()">
+    <button ion-fab color="tertiary">
+      <ion-icon name="add"></ion-icon>
+    </button>
+  </ion-fab>
 
 </ion-content>
