--- a/src/pages/settings/settings.html
+++ b/src/pages/settings/settings.html
@@ -15,6 +15,13 @@
       </ion-label>
       <ion-toggle (ionChange)="changeConfiguration()" [(ngModel)]="fingerprint" item-end></ion-toggle>
     </ion-item>
+    <ion-item-divider color="light">Application data</ion-item-divider>
+    <ion-item (click)="showAlert()">
+      <ion-icon name="trash" item-start></ion-icon>
+      <ion-label>
+        Clear application data
+      </ion-label>
+    </ion-item>
 
   </ion-item-group>
 </ion-content>
