--- a/src/pages/account/account.html
+++ b/src/pages/account/account.html
@@ -32,47 +32,77 @@
     <ion-list *ngSwitchCase="'all'">
       <p class="subtitle" *ngIf="movements.length == 0">No movements</p>
 
-      <ion-card *ngFor="let movement of movements" class="card-movement" (click)="showMovement(movement)">
-        <ion-card-header no-padding class="data-movement">
-          <p class="data-header movement-concept">{{movement._concept}}</p>
-          <p *ngIf="movement.isPositive" class="data-header value-positive">{{movement._value}}</p>
-          <p *ngIf="!movement.isPositive" class="data-header value-negative">{{movement._value}}</p>
-        </ion-card-header>
-        <ion-card-content no-padding class="data-movement">
-          <p class="data-content">{{movement._date}}</p>
-          <p class="data-content">{{movement._associateBalance}}</p>
-        </ion-card-content>
-      </ion-card>
+      <ion-item-sliding *ngFor="let movement of movements">
+        <ion-item class="card-movement" (click)="showMovement(movement)">
+          <div no-padding class="data-movement">
+            <p class="data-header movement-concept">{{movement._concept}}</p>
+            <p *ngIf="movement.isPositive" class="data-header value-positive">{{movement._valueFormatted}}</p>
+            <p *ngIf="!movement.isPositive" class="data-header value-negative">{{movement._valueFormatted}}</p>
+          </div>
+          <div no-padding class="data-movement">
+            <p class="data-content">{{movement._date}}</p>
+            <p class="data-content">{{movement._associateBalance}}</p>
+          </div>
+        </ion-item>
+
+        <ion-item-options side="right">
+          <button ion-button color="danger" (click)="removeMovement(movement)">
+            <ion-icon name="trash"></ion-icon>
+            Delete
+          </button>
+        </ion-item-options>
+      </ion-item-sliding>
+
     </ion-list>
 
     <ion-list *ngSwitchCase="'expenses'">
       <p class="subtitle" *ngIf="expenses.length == 0">No expenses</p>
 
-      <ion-card *ngFor="let spent of expenses" class="card-movement" (click)="showMovement(spent)">
-        <ion-card-header no-padding class="data-movement">
-          <p class="data-header movement-concept">{{spent._concept}}</p>
-          <p class="data-header value-negative">{{spent._value}}</p>
-        </ion-card-header>
-        <ion-card-content no-padding class="data-movement">
-          <p class="data-content">{{spent._date}}</p>
-          <p class="data-content">{{spent._associateBalance}}</p>
-        </ion-card-content>
-      </ion-card>
+      <ion-item-sliding *ngFor="let movement of expenses">
+        <ion-item class="card-movement" (click)="showMovement(movement)">
+          <div no-padding class="data-movement">
+            <p class="data-header movement-concept">{{movement._concept}}</p>
+            <p *ngIf="movement.isPositive" class="data-header value-positive">{{movement._valueFormatted}}</p>
+            <p *ngIf="!movement.isPositive" class="data-header value-negative">{{movement._valueFormatted}}</p>
+          </div>
+          <div no-padding class="data-movement">
+            <p class="data-content">{{movement._date}}</p>
+            <p class="data-content">{{movement._associateBalance}}</p>
+          </div>
+        </ion-item>
+
+        <ion-item-options side="right">
+          <button ion-button color="danger" (click)="removeMovement(movement)">
+            <ion-icon name="trash"></ion-icon>
+            Delete
+          </button>
+        </ion-item-options>
+      </ion-item-sliding>
     </ion-list>
 
     <ion-list *ngSwitchCase="'deposits'">
       <p class="subtitle" *ngIf="deposits.length == 0">No deposits</p>
 
-      <ion-card *ngFor="let deposit of deposits" class="card-movement" (click)="showMovement(deposit)">
-        <ion-card-header no-padding class="data-movement">
-          <p class="data-header movement-concept">{{deposit._concept}}</p>
-          <p class="data-header value-positive">{{deposit._value}}</p>
-        </ion-card-header>
-        <ion-card-content no-padding class="data-movement">
-          <p class="data-content">{{deposit._date}}</p>
-          <p class="data-content">{{deposit._associateBalance}}</p>
-        </ion-card-content>
-      </ion-card>
+      <ion-item-sliding *ngFor="let movement of deposits">
+        <ion-item class="card-movement" (click)="showMovement(movement)">
+          <div no-padding class="data-movement">
+            <p class="data-header movement-concept">{{movement._concept}}</p>
+            <p *ngIf="movement.isPositive" class=" data-header value-positive">{{movement._valueFormatted}}</p>
+            <p *ngIf="!movement.isPositive" class="data-header value-negative">{{movement._valueFormatted}}</p>
+          </div>
+          <div no-padding class="data-movement">
+            <p class="data-content">{{movement._date}}</p>
+            <p class="data-content">{{movement._associateBalance}}</p>
+          </div>
+        </ion-item>
+
+        <ion-item-options side="right">
+          <button ion-button color="danger" (click)="removeMovement(movement)">
+            <ion-icon name="trash"></ion-icon>
+            Delete
+          </button>
+        </ion-item-options>
+      </ion-item-sliding>
     </ion-list>
 
   </div>
