--- a/src/pages/add-movement/add-movement.html
+++ b/src/pages/add-movement/add-movement.html
@@ -35,7 +35,7 @@
 </ion-content>
 
 <ion-fab right bottom class="add-button">
-  <button ion-fab color="deposited" [disabled]="validator.errors" (click)="addMovement()">
+  <button ion-fab color="primary" [disabled]="validator.errors" (click)="addMovement()">
     <ion-icon name="checkmark"></ion-icon>
   </button>
 </ion-fab>
