--- a/src/pages/settings/settings.html
+++ b/src/pages/settings/settings.html
@@ -11,7 +11,7 @@
     <ion-item>
       <ion-icon name="finger-print" item-start></ion-icon>
       <ion-label>
-        Fingerprint Authentication
+        Fingerprint authentication
       </ion-label>
       <ion-toggle (ionChange)="changeConfiguration()" [(ngModel)]="fingerprint" item-end></ion-toggle>
     </ion-item>
