--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -1,5 +1,6 @@
 <ion-header no-border>
   <img class="logo" src="../../assets/imgs/logo.png">
+  <p>Last access: {{ currentDateTime }}</p>
 </ion-header>
 
 <ion-content>
@@ -7,7 +8,7 @@
 
     <ion-item class="item-access" (click)="readFingerprint()">
       <ion-icon class="icon-left-item" name="finger-print" item-start></ion-icon>
-      Access with fingerprint
+      Access fingerprint
     </ion-item>
 
   </ion-list>
