--- a/src/pages/movement/movement.html
+++ b/src/pages/movement/movement.html
@@ -5,8 +5,8 @@
 </ion-header>
 
 <ion-content padding>
-  <h6 class="date">{{movement._date}}</h6>
-  <h4 class="concept">{{movement._concept}}</h4>
-  <h2 *ngIf="movement.isPositive" class="value value-positive">{{movement._valueFormatted}}</h2>
-  <h2 *ngIf="!movement.isPositive" class="value value-negative">{{movement._valueFormatted}}</h2>
+  <h6 class="date">{{movement.date}}</h6>
+  <h4 class="concept">{{movement.concept}}</h4>
+  <h2 *ngIf="movement.isPositive" class="value value-positive">{{movement.valueFormatted}}</h2>
+  <h2 *ngIf="!movement.isPositive" class="value value-negative">{{movement.valueFormatted}}</h2>
 </ion-content>
