Multilanguage implemented (internalization?) and some visual changes.

--- a/src/pages/about-sitamet/about-sitamet.html
+++ b/src/pages/about-sitamet/about-sitamet.html
@@ -1,12 +1,10 @@
 <ion-header no-border>
   <ion-navbar>
-    <ion-title>About Sitamet</ion-title>
+    <ion-title>{{ 'ABOUT_SITAMET' | translate }}</ion-title>
   </ion-navbar>
 </ion-header>
 
 <ion-content padding>
   <img class="logo" src="../../assets/imgs/logo.png">
-  <p>Sitamet is a hybrid mobile application that is part of the final projects of the Certificate of Higher Education
-    (HNC) - Multiplatform Applications Development. Sitamet helps you keep track of the movements made in your personal
-    economy. Simple but useful.</p>
+  <p>{{ 'ABOUT_SITAMET_MESSAGE' | translate }}</p>
 </ion-content>
