--- a/src/pages/movement/movement.html
+++ b/src/pages/movement/movement.html
@@ -1,6 +1,6 @@
 <ion-header no-border>
   <ion-navbar>
-    <ion-title>Movement</ion-title>
+    <ion-title>{{ 'MOVEMENT' | translate }}</ion-title>
   </ion-navbar>
 </ion-header>
 
