--- a/src/pages/settings/settings.html
+++ b/src/pages/settings/settings.html
@@ -1,25 +1,31 @@
 <ion-header no-border>
   <ion-navbar>
-    <ion-title>Settings</ion-title>
+    <ion-title>{{ 'SETTINGS' | translate }}</ion-title>
   </ion-navbar>
 </ion-header>
 
 <ion-content>
   <ion-item-group>
-
-    <ion-item-divider color="light">Security</ion-item-divider>
+    <ion-item-divider color="light">{{ 'GENERAL' | translate }}</ion-item-divider>
+    <ion-item (click)="openLanguagePage()">
+      <ion-icon name="globe" item-start></ion-icon>
+      <ion-label>
+        {{ 'LANGUAGE' | translate }}
+      </ion-label>
+    </ion-item>
+    <ion-item-divider color="light">{{ 'SECURITY' | translate }}</ion-item-divider>
     <ion-item>
       <ion-icon name="finger-print" item-start></ion-icon>
       <ion-label>
-        Fingerprint authentication
+        {{ 'FINGERPRINT_AUTHENTICATION' | translate }}
       </ion-label>
       <ion-toggle (ionChange)="changeConfiguration()" [(ngModel)]="fingerprint" item-end></ion-toggle>
     </ion-item>
-    <ion-item-divider color="light">Application data</ion-item-divider>
+    <ion-item-divider color="light">{{ 'STORAGE' | translate }}</ion-item-divider>
     <ion-item (click)="showAlert()">
       <ion-icon name="trash" item-start></ion-icon>
       <ion-label>
-        Clear application data
+        {{ 'DELETE_STORAGE' | translate }}
       </ion-label>
     </ion-item>
 
